@@ -34,9 +34,9 @@ DIST sbcl-1.0.28-x86-64-linux-binary.tar.bz2 8159304 RMD160 641a6848a1436ac3b748
 DIST sbcl-1.0.28-x86-linux-binary.tar.bz2 8370430 RMD160 b77461d82484fdf5e251a929fbd797b3256a1de1 SHA1 b57bd4ab78c98766993711ab16e8493e815cbc99 SHA256 68aed5ed7e1fb6f64b789bfa722efe82b23dbee72853ad60d35503e67792b8e4
 DIST sbcl-1.0.31-source.tar.bz2 3354506 RMD160 e94c9097ff4138471c179bfe1f1e2c33e6f2e169 SHA1 4a4b74de174f97050a2785ac4559aa6dd48a3d09 SHA256 d0264d6e4a49e6d181c27348f07de733c09860c9cd74a1fbe8e6e3cb7ca289dc
 EBUILD sbcl-1.0.19.ebuild 7118 RMD160 0baadb6a0ce660a5d4e7f17b15024487369c66c8 SHA1 7b150ae87c7106c807159a121f7639877ebfc0c1 SHA256 e444c131e51b34b6e3f430b7b2b78316d386b7368d14c04af31a001b94f396c8
-EBUILD sbcl-1.0.26-r10.ebuild 6833 RMD160 2c4d63059513ac4dffecedc84d90549a5eb2507e SHA1 02e79a85aa2439c8a981ef91a9981f939c8f371b SHA256 1792d909158900a3ee5017b489ccace1a18ba678f66217a06ea7633055d44d90
-EBUILD sbcl-1.0.27-r10.ebuild 6771 RMD160 28479d0deecb49fce80171a552e8ff4dbed0fe2c SHA1 bd63fb1dfaa48809d2a2b1e6448a941c4a8d1ea2 SHA256 82c096ab0686b5e6d63ae07a8ddc62d9e2f4f5042d62311fd7a004e6b6d80185
-EBUILD sbcl-1.0.28.ebuild 6712 RMD160 80e14276a8106345a5de9bba059bd8fd5ec38e1f SHA1 a8f5abb016ac96389fe8d512a77811352e4939cf SHA256 a111fa8e72d0a601103efe6b90db419e1e5e70d7022afbf1008139df6c6e7593
-EBUILD sbcl-1.0.31.ebuild 6704 RMD160 04870ad57dd34b901fc976b98e11b0dd1a2e0dad SHA1 ce55361cf120d1b6c035bb744beb66d66304a62c SHA256 f14c94b3dbf9073259b8d782c6b51c691639b961fedeb93d5c8b72a15143d1f3
-MISC ChangeLog 46018 RMD160 406105b60d264ded30f7231cc7577fcc81f0397d SHA1 dde40638ef5369a07689b2c95336054435fa987e SHA256 9fdaf89950d37f42516b8b44d99b2404b6c2de1841d953e1cdc1d38a76e42dad
+EBUILD sbcl-1.0.26-r10.ebuild 6865 RMD160 ab88587310e7c1692e5462453b951ee0b35244fa SHA1 6f5465b0c9c63f940b74bc131d6814fdf0cf5cad SHA256 d796be7071d2fb668580f743aeb9b3052992e62d57048c0524f4442bc15a114d
+EBUILD sbcl-1.0.27-r10.ebuild 6803 RMD160 34e652fdc8d4262bd4b8c9ed19b1f9cb4fc935e6 SHA1 6813ac5d2545fcba6e07252276e586f8c0da5c22 SHA256 fbe57ee495d13809991acb8d20e8af7a7f2d5218614566e3c56e8a99d133ff0c
+EBUILD sbcl-1.0.28.ebuild 6748 RMD160 be91fb827109a9de0193a37af52c093916d7321d SHA1 45f5e1c48343cfe74f32c50b27ce1a9fbc4c709f SHA256 04d49cda981f300f536d0a7e748ea7f95161425a96af7629ca82b26e375fe634
+EBUILD sbcl-1.0.31.ebuild 6740 RMD160 4b4ab6f81db4a775a7c9b19afc36f1b35793b2b0 SHA1 284565a323e3e52a850c1f8272bbebe71a625460 SHA256 7d0452ed9c4ad3a3b5f2981be663c93928cb2c6dc66c840c8ffbbeac7cdc31bc
+MISC ChangeLog 46200 RMD160 ab27f876f49f9240a99e35c389139402c67ad99a SHA1 a8e81b9edeff1ed5ee50ebfd9bf8293eea3fffe6 SHA256 00baf71cab58c15b1405cd0437f4778da53ec692229e8083f0ef59eea3e8911a
 MISC metadata.xml 1192 RMD160 cc9ef1f835468d8901a7fac96ff183cffaa8448f SHA1 d628ab8da2e19ab42b6df9dcd1afc09e3efdcd05 SHA256 b5fb21d6b7020a9ebde8793cfb7209ee1db5c5d6ee0b1c8fd6c7b7e3a3db27b1
