@@ -1,6 +1,10 @@
 # ChangeLog for dev-lisp/sbcl
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lisp/sbcl/ChangeLog,v 1.159 2009/08/31 13:51:07 hkbst Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lisp/sbcl/ChangeLog,v 1.160 2009/09/30 22:10:01 maekke Exp $
+
+  30 Sep 2009; Markus Meier <maekke@gentoo.org> sbcl-1.0.26-r10.ebuild,
+  sbcl-1.0.27-r10.ebuild, sbcl-1.0.28.ebuild, sbcl-1.0.31.ebuild:
+  fix media-gfx/graphviz dep, bug #286615
 
 *sbcl-1.0.31 (31 Aug 2009)
 
